Fix sizing and spacing errors

--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,7 @@ nav a:hover {
 
 .btn-ghost {
   color: #005e76;
-  border-color: #8bc9d9;
+  border: 2px solid #8bc9d9;
 }
 
 .btn-ghost:hover {
